# zscheme

./: Cargo.toml  HANDBOOK.md  Makefile  README.md  REFERENCE.md  aliases.z  runtime.z  runtime.zscm  stdlib.z  stdlib.zscm
.github/workflows/: ci.yaml  ci.yml  release.yaml
src/: client.rs  context.rs  daemon.rs  executor.rs  ipc.rs  lib.rs  main.rs  repl.rs
src/scheme/: eval.rs  mod.rs  parser.rs  value.rs
tests/: language.rs  tco_named_let_apply.z  tco_named_let_apply.zcm
tests/functional/: address_book.z  core_language.zcm  data_pipeline.z  dot_config.z  session_docs.z
